Refactor config screen